ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/GC_Pledge_Terms__c.field-meta.xml
<CustomField>
    <fullName>GC_Pledge_Terms__c</fullName>
    <description>TEMPORARY field for setting up FormAssembly web-to-lead.</description>
    <label>GC Pledge Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly $84</fullName>
            </value>
            <value>
                <fullName>Quarterly $250</fullName>
            </value>
            <value>
                <fullName>Today $1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>