ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/Latinx_Giving_Circle__c.field-meta.xml
<CustomField>
    <fullName>Latinx_Giving_Circle__c</fullName>
    <description>Field for accepting forms online (ref FormAssembly).</description>
    <label>Latinx GC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Valley LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Cisco Conexion LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>East Bay LGC (men)</fullName>
            </value>
            <value>
                <fullName>East Bay LGC (women)</fullName>
            </value>
            <value>
                <fullName>Inland Empire LGC</fullName>
            </value>
            <value>
                <fullName>Latinos in Tech (co-ed)</fullName>
            </value>
            <value>
                <fullName>LatinX LGBTQ GC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Los Angeles LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Peninsula LGC (women)</fullName>
            </value>
            <value>
                <fullName>Pleasanton LGC (women)</fullName>
            </value>
            <value>
                <fullName>Sacramento LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>San Diego LGC</fullName>
            </value>
            <value>
                <fullName>San Francisco LGC (men)</fullName>
            </value>
            <value>
                <fullName>San Francisco LGC (women)</fullName>
            </value>
            <value>
                <fullName>Solano County LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>South Bay LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Southern East Bay LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Wine Country LGC (co-ed)</fullName>
            </value>
            <value>
                <fullName>Santa Barbara LGC (co-ed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>