ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/LGC_Form__c.field-meta.xml
<CustomField>
    <fullName>LGC_Form__c</fullName>
    <label>LGC Form Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>