ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/LGC_Form_Followup__c.field-meta.xml
<CustomField>
    <fullName>LGC_Form_Followup__c</fullName>
    <label>LGC Form Followup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undecided need more info</fullName>
            </value>
            <value>
                <fullName>Create new circle</fullName>
            </value>
            <value>
                <fullName>New GC Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>