ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/LGC_Form_Other_Pmt_Comments__c.field-meta.xml
<CustomField>
    <fullName>LGC_Form_Other_Pmt_Comments__c</fullName>
    <description>LGC Enrollment Form - comments when choosing &quot;Other&quot; for Payment Method.</description>
    <label>LGC Form Other Pmt Comments</label>
    <type>TextArea</type>
</CustomField>