ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/fields/LookupCampaign__c.field-meta.xml
<CustomField>
    <fullName>LookupCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>