ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/recordTypes/Event_Lead.recordType-meta.xml
<RecordType>
    <fullName>Event_Lead</fullName>
    <active>true</active>
    <businessProcess>Leads from Events</businessProcess>
    <description>Leads generated from Gala, Summit, Retreats, Conversaciones etc</description>
    <label>Events Lead</label>
</RecordType>