ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/recordTypes/NFGleads.recordType-meta.xml
<RecordType>
    <fullName>NFGleads</fullName>
    <active>true</active>
    <businessProcess>Leads from Events</businessProcess>
    <description>For converting Leads info in NFG to Contact and Oppty records</description>
    <label>NFGleads</label>
</RecordType>