ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/recordTypes/Website_Lead.recordType-meta.xml
<RecordType>
    <fullName>Website_Lead</fullName>
    <active>true</active>
    <businessProcess>Leads_from_website_LGCform</businessProcess>
    <description>Leads from website</description>
    <label>Website Lead</label>
</RecordType>