ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Lead/listViews/AllLeadss.listView-meta.xml
<ListView>
    <fullName>AllLeadss</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>All Leads</label>
</ListView>